<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/w3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--标题栏-->
    <RelativeLayout
        android:layout_marginStart="@dimen/x24"
        android:layout_marginEnd="@dimen/x24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y124">

        <!--取消-->
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancle"
            android:layout_centerVertical="true"
            style="@style/green1_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--title-->
        <TextView
            android:id="@+id/title"
            android:text="@string/set_xsx_password"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/b0"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--完成-->
        <TextView
            android:id="@+id/complete"
            android:text="@string/complete"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:alpha="0.5"
            style="@style/green1_15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <!--提示文字-->
    <TextView
        android:layout_marginTop="@dimen/y42"
        android:text="@string/set_xsx_password_notice"
        android:id="@+id/notice"
        android:textSize="15sp"
        android:textColor="@color/g0"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--输入密码布局-->
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/w0"
        android:layout_marginTop="@dimen/y84"
        android:paddingStart="@dimen/x42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--手机号-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y126">
            
            <TextView
                android:text="@string/phoneNumber"
                android:gravity="center_vertical"
                android:layout_width="@dimen/x282"
                android:layout_height="match_parent" />

            <TextView
                android:text="88888888888"
                android:id="@+id/tv_phoneNumber"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--密码-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y126">

            <TextView
                android:text="@string/password"
                android:gravity="center_vertical"
                android:layout_width="@dimen/x282"
                android:layout_height="match_parent" />

            <EditText
                android:hint="@string/please_set_8_16_password"
                android:id="@+id/et_password"
                style="@style/input_passworder"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <include layout="@layout/line_horizontal_g1">

        </include>

        <!--确认密码-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y126">

            <TextView
                android:text="@string/comfirm_code"
                android:gravity="center_vertical"
                android:layout_width="@dimen/x282"
                android:layout_height="match_parent" />

            <EditText
                android:hint="@string/re_comfirm_code"
                android:id="@+id/et_password2"
                style="@style/input_passworder"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>